discussion/kv_engine/122336/122336_rev9_discussion.txt
======================================================================================================================
DESCRIPTION:

Add schedule_dcp_step to cookie interface

In order to tighten the logic for when cookies get notified
we'll start off by adding a method which should be used by
DCP in order to make sure that the step() method gets called
again.

This allows us to verify the 1:1 mapping between the engine
returning EWOULDBLOCK and a notify_io_complete, and that DCP
consumers stick to the contract that they need to reserve
the cookie before they can call schedule_dcp_step (and that
they don't use it after they've called release).

Change-Id: I03aa28e14fc2d6dce23cbc1779c956c97225f031

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2020-06-19 08:01:16.000000000
Message: 
Uploaded patch set 9.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2020-06-19 08:11:53.000000000
Message: 
Patch Set 9: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/24684/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/dcp/dcpconnmap.cc:408:41:
error: member reference type "std::__shared_ptr_access<ConnHandler, __gnu_cxx::_S_atomic, false, false>::element_type" (aka "ConnHandler") is not a pointer; did you mean to use "."?
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/24684/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/28660/ : FAILURE

Compile error at ..\kv_engine\engines\ep\src\dcp\dcpconnmap.cc(408): error C2819: type "ConnHandler" does not have an overloaded member "operator ->" ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/28660/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/2859/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/daemon/server_api.cc:240:13: error: value of type "void" is not contextually convertible to "bool" [clang-diagnostic-error]
        if (thr.notification.push(&cookie.getConnection())) {
            ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/daemon/server_api.cc:265:17: error: value of type "void" is not contextually convertible to "bool" [clang-diagnostic-error]
            if (thr.notification.push(&connection)) {
                ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/dcp/dcpconnmap.cc:408:41: error: member reference type "std::__shared_ptr_access<ConnHandler, __gnu_cxx::_S_atomic, false, false>::element_type" (aka "ConnHandler") is not a pointer; did you mean to use "."? [clang-diagnostic-error]
            engine.scheduleDcpStep((*it)->getCookie());
                                        ^~
                                        .

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/2859/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/daemon/server_api.cc:240:13:
error: value of type "void" is not contextually convertible to "bool" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/2859/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/4285/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/3336/ : FAILURE

Compile error at [2020-06-19T08:08:26.513Z] ../kv_engine/engines/ep/src/dcp/dcpconnmap.cc:408:41:
error: member reference type "ConnHandler" is not a pointer; did you mean to use "."?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/3336/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/4223/ : FAILURE

Compile error at [2020-06-19T08:08:06.332Z] ../kv_engine/engines/ep/src/dcp/dcpconnmap.cc:408:41:
error: base operand of ?->? has non-pointer type ?std::__shared_ptr_access<ConnHandler, (__gnu_cxx::_Lock_policy)2, false, false>::element_type {aka ConnHandler}?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/4223/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/4364/ : FAILURE

Compile error at [2020-06-19T08:06:16.046Z] ../kv_engine/engines/ep/src/dcp/dcpconnmap.cc:408:41:
error: base operand of ?->? has non-pointer type ?std::__shared_ptr_access<ConnHandler, (__gnu_cxx::_Lock_policy)2, false, false>::element_type {aka ConnHandler}?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/4364/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/12104/ : FAILURE

Compile error at [2020-06-19T08:07:26.231Z] ../kv_engine/engines/ep/src/dcp/dcpconnmap.cc:408:41:
error: base operand of ?->? has non-pointer type ?std::__shared_ptr_access<ConnHandler, (__gnu_cxx::_Lock_policy)2, false, false>::element_type {aka ConnHandler}?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/12104/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/1364/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
